# eicQuickSim

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test.csv
.github/workflows/: binscheme-runner.yml  en_5x41.yml  makefile.yml
artifacts/: test06_10x100_Q2_10_100.csv
hpc/: run_hpc.rb  run_hpc_jobs.rb  split_csvs.rb  write_hpc_csv.rb
macros/: analysis_DIS.C  analysis_DISIDIS.C  analysis_SIDIS.C  analysis_epDIS.C  preprocess_HPC.C
s3tools/: create_project.rb
src/bins/: example.yaml
src/eicQuickSim/: Analysis.C  Analysis.h  BinningScheme.C  BinningScheme.h  CombinedRowsProcessor.C  CombinedRowsProcessor.h  FileDataSummary.C  FileDataSummary.h  FileManager.C  FileManager.h  Kinematics.C  Kinematics.h  MigrationReader.C  MigrationReader.h  TreeManager.C  TreeManager.h  Weights.C  Weights.h  en_files.csv  en_lumi.csv  ep_files.csv
src/tests/: test00_readData.C  test01_grabFiles.C  test02_dataSummary.C  test03_1_weightHistDIS.C  test03_weightHist.C  test03_weightHistDIS.C  test04_printEvent.C  test05_weightHistSIDIS.C  test06_uploadCSV.C  test07_epNevents.C  test07_migrationReader.C  test08_migrationHist.C  test08_weightHistDISIDIS.C  test09_binningScheme.C
src/tests/bins/: test09_sample_2d.csv  test09_sample_2d.yaml
src/tests/responseMatrices/: test07_response_xQ2_5x41.yaml
